- Add faraday_middleware as a gem dependency (json has been moved from core faraday to middleware since 0.8) - Add initial test coverage

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ build/
 .rvmrc
 .ruby-version
 .ruby-gemset
+
+# ignore real credentials to successfully perform tests
+spec/luminati/credentials.yml
